<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenCVCamera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="open_camera">打开摄像头</string>
    <string name="connect_net">连接到主机</string>
    <string name="disconnect">断开连接</string>
    <string name="ip_address">主机IP地址</string>
    <string name="port">主机端口</string>
    <string name="port_number">7000</string>

</resources>
