<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ccffcc"
    tools:context="com.example.opencvcamera.MainActivity" >

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:layout_marginTop="80sp"
        android:text="@string/open_camera" />
	<Button
	    android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_start"
        android:background="@android:color/transparent"
        android:layout_marginTop="20sp"
        android:text="@string/connect_net" />
	<Button
	    android:id="@+id/btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_connect"
        android:background="@android:color/transparent"
        android:layout_marginTop="20sp"
        android:text="@string/disconnect" />
</RelativeLayout>
