<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/text_ip_address"
        android:text="@string/ip_address"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:textSize="18dp"    
        />
    <EditText
        android:id="@+id/edit_ip_address"
        android:hint="@string/ip_address"
        android:layout_toRightOf="@id/text_ip_address"
        android:layout_alignBottom="@+id/text_ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView
        android:id="@+id/text_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_ip_address"
        android:layout_alignRight="@+id/text_ip_address"
        android:layout_below="@+id/text_ip_address"
        android:layout_marginTop="20dp"
        android:textSize="18dp"   
        android:text="@string/port" />
    <TextView
        android:id="@+id/text_port_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/text_port"
        android:layout_alignTop="@+id/text_port"
        android:layout_alignBottom="@+id/text_port"
        android:textSize="18dp"   
        android:text="@string/port_number" />

</RelativeLayout>